// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuGroup - JSX label 1`] = `
.c5 {
  list-style-type: none;
}

.c4 {
  font-size: 0.875rem;
  font-weight: 600;
  line-height: 1.25rem;
  padding-left: 1rem;
  color: #262D33;
}

.c2 {
  background: #FFFFFF;
  box-shadow: none;
  margin-bottom: 0.25rem;
  position: -webkit-sticky;
  position: sticky;
  top: -1px;
}

.c2 .c3 {
  color: #4C535B;
}

.c1 {
  padding: 0.5rem 0;
}

.c1 + .c0 {
  border-top: solid 1px #DEE1E5;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #343C42;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  font-size: 0.875rem;
  font-weight: 400;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c6 button,
.c6 a {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: none;
  color: inherit;
  cursor: pointer;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: inherit;
  font-weight: inherit;
  grid-gap: 0.75rem;
  grid-template-columns: 1fr;
  height: 40px;
  outline: none;
  padding: 0.5rem 1rem;
  position: relative;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6 button:hover,
.c6 a:hover,
.c6 button:focus,
.c6 a:focus {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6 button .c7,
.c6 a .c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  grid-gap: 0.75rem;
  grid-template-columns: 1fr;
}

.c6 .c8 {
  color: #C1C6CC;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c6:hover,
.c6[aria-current='true'] {
  background: #F5F6F7;
  color: #262D33;
}

.c6:hover .c8,
.c6[aria-current='true'] .c8 {
  color: #939BA5;
}

.c6[aria-current='true'] {
  font-weight: 600;
}

.c6[disabled] {
  color: #939BA5;
}

.c6[disabled] button,
.c6[disabled] a {
  cursor: not-allowed;
}

.c6[disabled]:hover {
  background: #FFFFFF;
  color: #939BA5;
}

.c6[disabled]:hover .c8 {
  color: #C1C6CC;
}

<li
  className="c0 c1"
>
  <div
    className="c2"
  >
    <div
      style={
        Object {
          "height": "0",
        }
      }
    />
    <h2
      className="c3 c4"
      fontSize="small"
      fontWeight="semiBold"
    >
      <div
        className=""
      >
        Questions
      </div>
    </h2>
  </div>
  <ul
    className="c5"
    type="none"
  >
    <li
      className="c6 "
      onBlur={[Function]}
      onClick={[Function]}
      onKeyUp={[Function]}
    >
      <button
        role="menuitem"
      >
        <div
          className="c7 "
        >
          what?
        </div>
      </button>
    </li>
    <li
      className="c6 "
      onBlur={[Function]}
      onClick={[Function]}
      onKeyUp={[Function]}
    >
      <button
        role="menuitem"
      >
        <div
          className="c7 "
        >
          who?
        </div>
      </button>
    </li>
    <li
      className="c6 "
      onBlur={[Function]}
      onClick={[Function]}
      onKeyUp={[Function]}
    >
      <button
        role="menuitem"
      >
        <div
          className="c7 "
        >
          where?
        </div>
      </button>
    </li>
  </ul>
</li>
`;

exports[`MenuGroup - label 1`] = `
.c5 {
  list-style-type: none;
}

.c4 {
  font-size: 0.875rem;
  font-weight: 600;
  line-height: 1.25rem;
  padding-left: 1rem;
  color: #262D33;
}

.c2 {
  background: #FFFFFF;
  box-shadow: none;
  margin-bottom: 0.25rem;
  position: -webkit-sticky;
  position: sticky;
  top: -1px;
}

.c2 .c3 {
  color: #4C535B;
}

.c1 {
  padding: 0.5rem 0;
}

.c1 + .c0 {
  border-top: solid 1px #DEE1E5;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #343C42;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  font-size: 0.875rem;
  font-weight: 400;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c6 button,
.c6 a {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: none;
  color: inherit;
  cursor: pointer;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: inherit;
  font-weight: inherit;
  grid-gap: 0.75rem;
  grid-template-columns: 1fr;
  height: 40px;
  outline: none;
  padding: 0.5rem 1rem;
  position: relative;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6 button:hover,
.c6 a:hover,
.c6 button:focus,
.c6 a:focus {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6 button .c7,
.c6 a .c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  grid-gap: 0.75rem;
  grid-template-columns: 1fr;
}

.c6 .c8 {
  color: #C1C6CC;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c6:hover,
.c6[aria-current='true'] {
  background: #F5F6F7;
  color: #262D33;
}

.c6:hover .c8,
.c6[aria-current='true'] .c8 {
  color: #939BA5;
}

.c6[aria-current='true'] {
  font-weight: 600;
}

.c6[disabled] {
  color: #939BA5;
}

.c6[disabled] button,
.c6[disabled] a {
  cursor: not-allowed;
}

.c6[disabled]:hover {
  background: #FFFFFF;
  color: #939BA5;
}

.c6[disabled]:hover .c8 {
  color: #C1C6CC;
}

<li
  className="c0 c1"
>
  <div
    className="c2"
  >
    <div
      style={
        Object {
          "height": "0",
        }
      }
    />
    <h2
      className="c3 c4"
      fontSize="small"
      fontWeight="semiBold"
    >
      Questions
    </h2>
  </div>
  <ul
    className="c5"
    type="none"
  >
    <li
      className="c6 "
      onBlur={[Function]}
      onClick={[Function]}
      onKeyUp={[Function]}
    >
      <button
        role="menuitem"
      >
        <div
          className="c7 "
        >
          what?
        </div>
      </button>
    </li>
    <li
      className="c6 "
      onBlur={[Function]}
      onClick={[Function]}
      onKeyUp={[Function]}
    >
      <button
        role="menuitem"
      >
        <div
          className="c7 "
        >
          who?
        </div>
      </button>
    </li>
    <li
      className="c6 "
      onBlur={[Function]}
      onClick={[Function]}
      onKeyUp={[Function]}
    >
      <button
        role="menuitem"
      >
        <div
          className="c7 "
        >
          where?
        </div>
      </button>
    </li>
  </ul>
</li>
`;

exports[`MenuGroup 1`] = `
.c2 {
  list-style-type: none;
}

.c1 {
  padding: 0.5rem 0;
}

.c1 + .c0 {
  border-top: solid 1px #DEE1E5;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #343C42;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  font-size: 0.875rem;
  font-weight: 400;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c3 button,
.c3 a {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: none;
  color: inherit;
  cursor: pointer;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: inherit;
  font-weight: inherit;
  grid-gap: 0.75rem;
  grid-template-columns: 1fr;
  height: 40px;
  outline: none;
  padding: 0.5rem 1rem;
  position: relative;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 button:hover,
.c3 a:hover,
.c3 button:focus,
.c3 a:focus {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 button .c4,
.c3 a .c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  grid-gap: 0.75rem;
  grid-template-columns: 1fr;
}

.c3 .c5 {
  color: #C1C6CC;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c3:hover,
.c3[aria-current='true'] {
  background: #F5F6F7;
  color: #262D33;
}

.c3:hover .c5,
.c3[aria-current='true'] .c5 {
  color: #939BA5;
}

.c3[aria-current='true'] {
  font-weight: 600;
}

.c3[disabled] {
  color: #939BA5;
}

.c3[disabled] button,
.c3[disabled] a {
  cursor: not-allowed;
}

.c3[disabled]:hover {
  background: #FFFFFF;
  color: #939BA5;
}

.c3[disabled]:hover .c5 {
  color: #C1C6CC;
}

<li
  className="c0 c1"
>
  <ul
    className="c2"
    type="none"
  >
    <li
      className="c3 "
      onBlur={[Function]}
      onClick={[Function]}
      onKeyUp={[Function]}
    >
      <button
        role="menuitem"
      >
        <div
          className="c4 "
        >
          who!
        </div>
      </button>
    </li>
  </ul>
</li>
`;
